- modified editor to show toolbox for new instances, and hide unneeded options if not handling an existing instance - modified settings/base.py to lower quality of generated thumbnails to 75 instead of 95 - added alias definitions for Thumbnails to settings/base.py (content_thumb/content_large) - updated ck-content styling to show centered images as large and left/right aligned as thumb (this still needs to be revised to pull the correct thumbnail when showing content. currently just using small version and setting size manually with css. -

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -626,12 +626,16 @@ table.responsive_table, table.responsive_table table.responsive_table {
     table.responsive_table tr:first-child th:last-child, table.responsive_table table.responsive_table tr:first-child th:last-child {
       border-top-right-radius: .75em; }
 
+.ck-content figure.image img {
+  height: 300px; }
 .ck-content figure.image.image-style-align-right {
   float: right; }
+  .ck-content figure.image.image-style-align-right img {
+    height: 200px; }
 .ck-content figure.image.image-style-align-left {
   float: left; }
-.ck-content figure.image img {
-  height: 200px; }
+  .ck-content figure.image.image-style-align-left img {
+    height: 200px; }
 .ck-content figure figcaption {
   background: #eee;
   font-style: italic;
